--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/generic.header.css" />
-    <link rel="stylesheet" href="css/games.css" />
-    <link rel="stylesheet" href="css/media.screen.css">
-    <title>TecBloog - Games</title>
+    <link rel="stylesheet" href="css/generics/generic.header.css"/>
+    <link rel="stylesheet" href="css/page.home.css"/>
+    <link rel="stylesheet" href="css/generics/generic.footer.css"/>
+    <link rel="stylesheet" href="css/media.screen.css"/>
+    <title>Bem-Vindo(a) - TecBlog</title>
   </head>
   <body>
-
     <header class="header">
       <div>
         <div class="header-title">
           <h1><a href="./index.html">TecBloog</a></h1>
-        </div>
-        <div class="title-page-header">
-          <h1>GAMES</h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
@@ -25,68 +22,35 @@
         </div>
       </div>
     </header>
-
-    <main>
-      <div class="posts">
-        <div class="imagem">
-
-        </div>
-        <div class="texto">
-          <h2>Título</h2>
-          <p>
-            Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla
-          </p>
-        </div>
+    <main class="main-menu">
+      <div class="lineOne">
+        <section class="square section-jogos">
+          <a href="#" title="Aplicaticos">
+            <h1>APLICATIVOS</h1>
+            <img src="imagens/apps_background.png" alt="">
+          </a>
+        </section>
+        <section class="square section-smartphone">
+          <a href="./games.html" title="Games">
+            <h1>GAMES</h1>
+            <img src="imagens/jogos_background.jpeg" alt="">
+          </a>
+        </section>
       </div>
-
-      <div class="posts">
-        <div class="imagem">
-
-        </div>
-        <div class="texto">
-          <h2>Título</h2>
-          <p>
-            Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla
-          </p>
-        </div>
+      <div class="lineTwo">
+        <section class="square section-apps">
+          <a href="#" title="Smartphones">
+            <h1>SMARTPHONES</h1>
+            <img src="imagens/smartphone_background.jpeg" alt="">
+          </a>
+        </section>
+        <section class="square section-hardware">
+          <a href="./hardware.html" title="Hardware">
+            <h1>HARDWARE</h1>
+            <img src="imagens/hardware_background.jpeg" alt="">
+          </a>
+        </section>
       </div>
-
-      <div class="posts">
-        <div class="imagem">
-
-        </div>
-        <div class="texto">
-          <h2>Título</h2>
-          <p>
-            Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla
-          </p>
-        </div>
-      </div>
-
-      <div class="posts">
-        <div class="imagem">
-
-        </div>
-        <div class="texto">
-          <h2>Título</h2>
-          <p>
-            Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla
-          </p>
-        </div>
-      </div>
-
-      <div class="posts">
-        <div class="imagem">
-
-        </div>
-        <div class="texto">
-          <h2>Título</h2>
-          <p>
-            Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla
-          </p>
-        </div>
-      </div>
-
     </main>
 
     <footer class="footer">
@@ -118,4 +82,5 @@
     </footer>
 
   </body>
+  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </html>
