--- a/aplicativos.html
+++ b/aplicativos.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/generics/generic.posts.css"/>
     <link rel="stylesheet" href="css/generics/generic.aside.css"/>
     <link rel="stylesheet" href="css/generics/generic.footer.css"/>
-    <link rel="stylesheet" href="css/page.hardware.css"/>
+    <link rel="stylesheet" href="css/page.games.css"/>
     <link rel="stylesheet" href="css/media.screen.css"/>
-    <title>Hardware - TecBlog</title>
+    <title>Games - TecBlog</title>
   </head>
   <body>
 
@@ -20,7 +20,7 @@
           <h1><a href="./index.html">TecBlog</a></h1>
         </div>
         <div class="title-page-header">
-          <h1>HARDWARE</h1>
+          <h1>APLICATIVOS</h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
@@ -34,7 +34,7 @@
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
-          <a href="./games.html">HARDWARE</a>
+          <a href="./games.html">GAMES</a>
         </div>
       </div>
     </header>
