--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div>
         <div class="header-title">
-          <h1><a href="./index.html">TecBloog</a></h1>
+          <h1><a href="./index.html">TecBlog</a></h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
