Correções e melhoria estrutural - Irei detalhar mais no próximo update

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="main-menu">
       <div class="lineOne">
         <section class="square section-jogos">
-          <a href="#" title="Aplicaticos">
+          <a href="pages/aplicativos.html" title="Aplicaticos">
             <h1>APLICATIVOS</h1>
             <img src="imagens/apps_background.png" alt="">
           </a>
         </section>
         <section class="square section-smartphone">
-          <a href="./games.html" title="Games">
+          <a href="pages/games.html" title="Games">
             <h1>GAMES</h1>
             <img src="imagens/jogos_background.jpeg" alt="">
           </a>
@@ -39,13 +39,13 @@
       </div>
       <div class="lineTwo">
         <section class="square section-apps">
-          <a href="#" title="Smartphones">
+          <a href="pages/smartphone.html" title="Smartphones">
             <h1>SMARTPHONES</h1>
             <img src="imagens/smartphone_background.jpeg" alt="">
           </a>
         </section>
         <section class="square section-hardware">
-          <a href="./hardware.html" title="Hardware">
+          <a href="pages/hardware.html" title="Hardware">
             <h1>HARDWARE</h1>
             <img src="imagens/hardware_background.jpeg" alt="">
           </a>
