--- a/pages/aplicativos.html
+++ b/pages/aplicativos.html
@@ -4,24 +4,23 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/generics/generic.header.css"/>
-    <link rel="stylesheet" href="css/generics/generic.posts.css"/>
-    <link rel="stylesheet" href="css/generics/generic.aside.css"/>
-    <link rel="stylesheet" href="css/generics/generic.footer.css"/>
-    <link rel="stylesheet" href="css/page.games.css"/>
-    <link rel="stylesheet" href="css/media.screen.css"/>
-    <title>Games - TecBlog</title>
+    <link rel="stylesheet" href="../css/generics/generic.header.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.posts.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.aside.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.footer.css"/>
+    <link rel="stylesheet" href="../css/page.games.css"/>
+    <link rel="stylesheet" href="../css/media.screen.css"/>
+    <title>Aplicativos - TecBlog</title>
   </head>
-  
   <body>
 
     <header class="header">
       <div>
         <div class="header-title">
-          <h1><a href="./index.html">TecBlog</a></h1>
+          <h1><a href="../index.html">TecBlog</a></h1>
         </div>
         <div class="title-page-header">
-          <h1>GAMES</h1>
+          <h1>APLICATIVOS</h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
@@ -31,11 +30,11 @@
       <div class="migalhas">
         <div>
           <!-- BASTA DUPLICAR O (a) COM O NOME E O LINK PARA ADICIONAR OUTRA MIGALHA -->
-          <a href="./index.html">HOME
+          <a href="../index.html">HOME
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
-          <a href="./games.html">GAMES</a>
+          <a href="aplicativos.html">APLICATIVOS</a>
         </div>
       </div>
     </header>
@@ -45,21 +44,21 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="games-post.hmtl">
-                <img src="imagens/posts/ghostbusters.png" alt="Ghostbusters">
+              <a href="#">
+                <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">Jogo ganhou trailer de lançamento</p>
-                <a href="games-post.html">
-                  <h2>Ghostbusters World, jogo estilo Pokémon GO, é lançado para Android e iOS</h2>
+              <p class="texto-p-header">SOLTA O SOM!</p>
+                <a href="#">
+                  <h2>Veja dicas para bateria da caixinha da JBL durar mais</h2>
                 </a>
               <p class="texto-p-main">
-                Depois de Jurassic Park, The Walking Dead, Harry Potter e até mesmo Jesus ganharem jogos
-                 no estilo Pokémon GO, chegou a hora dos Caça-Fantasmas entrarem em ação.
+                Orientações também indicam métodos para o carregamento
+                ser mais rápido e eficiente
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM LANÇAMENTOS
+                ONTEM - EM CAIXAS DE SOM
               </p>
             </div>
           </div>
@@ -67,20 +66,22 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/fortnite.png" alt="Fortnite">
+                <img src="../imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">Recurso estará disponível em todos os modos e plataformas</p>
+              <p class="texto-p-header"></p>
                 <a href="#">
-                  <h2>Nova atualização de Fortnite deixará jogadores abrirem paraquedas durante partidas</h2>
+                  <h2>Moderninha Smart é boa? Veja taxas e como funciona a máquina
+                    do PagSeguro</h2>
                 </a>
               <p class="texto-p-main">
-                Em seu blog oficial, a Epic Games anunciou que a próxima atualização de Fortnite
-                 vai adicionar um novo recurso para os jogadores abrirem seus paraquedas durante as partidas.
+                Nova máquina de cartão do PagSeguro traz tecnologias de
+                gestão e integração com o Android; saiba se ela é uma boa
+                opção para o seu negócio
               </p>
               <p class="texto-p-footer">
-                HÁ 10 HORAS - EM ATUALIZAÇÕES
+                HÁ 10 HORAS - EM MÁQUINAS DE CARTÃO
               </p>
             </div>
           </div>
@@ -88,46 +89,22 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/bungie.png" alt="Destiny">
+                <img src="../imagens/posts/videogame.png" alt="Video Game">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">Jogo seria mais focado em elementos RPG</p>
+              <p class="texto-p-header"></p>
                 <a href="#">
-                  <h2>Bungie já está desenvolvendo Destiny 3 [Rumor]</h2>
+                  <h2>Como usar o novo Editor de Avatares do Xbox One</h2>
                 </a>
               <p class="texto-p-main">
-                Parece que a Bungie não perdeu tempo depois de lançar o DLC Renegados
-                 e já está desenvolvendo Destiny 3!
+                Criador de personagens foi atualizado com diversos itens e aparências
               </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM NOTÍCIAS
+                HÁ 11 HORAS - EM VIDEO GAME
               </p>
             </div>
           </div>
-
-          <!-- <div class="posts">
-            <div class="imagem">
-              <a href="#">
-                <img src="imagens/posts/site-gears.jpg" alt="Rod Fergusson">
-              </a>
-            </div>
-            <div class="texto">
-              <p class="texto-p-header">novos jogos da franquia! </p>
-                <a href="#">
-                  <h2>Próximos jogos de Gears of War marcam uma nova fase do estúdio, diz Rod Fergusson</h2>
-                </a>
-              <p class="texto-p-main">
-                Na BGS 2018, tivemos a excelente oportunidade de conversar com
-                 Rod Fergusson, chefe do estúdio The Coalition e produtor da franquia Gears of War!
-              </p>
-              <p class="texto-p-footer">
-                ONTEM - EM XBOX
-              </p>
-            </div>
-          </div> -->
-
-
 
         </div>
         <aside class="main-aside">
@@ -137,7 +114,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -151,7 +128,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -165,7 +142,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -187,7 +164,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -201,7 +178,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -215,7 +192,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -263,5 +240,4 @@
       </div>
     </footer>
   </body>
-  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </html>
