--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/generics/generic.header.css"/>
-    <link rel="stylesheet" href="css/generics/generic.posts.css"/>
-    <link rel="stylesheet" href="css/generics/generic.aside.css"/>
-    <link rel="stylesheet" href="css/generics/generic.footer.css"/>
-    <link rel="stylesheet" href="css/page.games.css"/>
-    <link rel="stylesheet" href="css/media.screen.css"/>
-    <title>Games - TecBlog</title>
+    <link rel="stylesheet" href="../css/generics/generic.header.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.posts.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.aside.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.footer.css"/>
+    <link rel="stylesheet" href="../css/page.hardware.css"/>
+    <link rel="stylesheet" href="../css/media.screen.css"/>
+    <title>Hardware - TecBlog</title>
   </head>
   <body>
 
@@ -20,7 +20,7 @@
           <h1><a href="./index.html">TecBlog</a></h1>
         </div>
         <div class="title-page-header">
-          <h1>APLICATIVOS</h1>
+          <h1>HARDWARE</h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
@@ -30,11 +30,11 @@
       <div class="migalhas">
         <div>
           <!-- BASTA DUPLICAR O (a) COM O NOME E O LINK PARA ADICIONAR OUTRA MIGALHA -->
-          <a href="./index.html">HOME
+          <a href="../index.html">HOME
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
-          <a href="./games.html">GAMES</a>
+          <a href="hardware.html">HARDWARE</a>
         </div>
       </div>
     </header>
@@ -45,7 +45,7 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
               </a>
             </div>
             <div class="texto">
@@ -66,7 +66,7 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
+                <img src="../imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
               </a>
             </div>
             <div class="texto">
@@ -89,7 +89,7 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/videogame.png" alt="Video Game">
+                <img src="../imagens/posts/videogame.png" alt="Video Game">
               </a>
             </div>
             <div class="texto">
@@ -114,7 +114,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -128,7 +128,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -142,7 +142,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -164,7 +164,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -178,7 +178,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -192,7 +192,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
