--- a/pages/games.html
+++ b/pages/games.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/generics/generic.header.css"/>
-    <link rel="stylesheet" href="css/generics/generic.posts.css"/>
-    <link rel="stylesheet" href="css/generics/generic.aside.css"/>
-    <link rel="stylesheet" href="css/generics/generic.footer.css"/>
-    <link rel="stylesheet" href="css/page.games.css"/>
-    <link rel="stylesheet" href="css/media.screen.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.header.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.posts.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.aside.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.footer.css"/>
+    <link rel="stylesheet" href="../css/page.games.css"/>
+    <link rel="stylesheet" href="../css/media.screen.css"/>
     <title>Games - TecBlog</title>
   </head>
+  
   <body>
 
     <header class="header">
@@ -20,7 +21,7 @@
           <h1><a href="./index.html">TecBlog</a></h1>
         </div>
         <div class="title-page-header">
-          <h1>SMARTPHONE</h1>
+          <h1>GAMES</h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
@@ -30,11 +31,11 @@
       <div class="migalhas">
         <div>
           <!-- BASTA DUPLICAR O (a) COM O NOME E O LINK PARA ADICIONAR OUTRA MIGALHA -->
-          <a href="./index.html">HOME
+          <a href="../index.html">HOME
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
-          <a href="./games.html">GAMES</a>
+          <a href="games.html">GAMES</a>
         </div>
       </div>
     </header>
@@ -44,21 +45,21 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+              <a href="games-post.hmtl">
+                <img src="../imagens/posts/ghostbusters.png" alt="Ghostbusters">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">SOLTA O SOM!</p>
-                <a href="#">
-                  <h2>Veja dicas para bateria da caixinha da JBL durar mais</h2>
+              <p class="texto-p-header">Jogo ganhou trailer de lançamento</p>
+                <a href="games-post.html">
+                  <h2>Ghostbusters World, jogo estilo Pokémon GO, é lançado para Android e iOS</h2>
                 </a>
               <p class="texto-p-main">
-                Orientações também indicam métodos para o carregamento
-                ser mais rápido e eficiente
+                Depois de Jurassic Park, The Walking Dead, Harry Potter e até mesmo Jesus ganharem jogos
+                 no estilo Pokémon GO, chegou a hora dos Caça-Fantasmas entrarem em ação.
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM CAIXAS DE SOM
+                ONTEM - EM LANÇAMENTOS
               </p>
             </div>
           </div>
@@ -66,22 +67,20 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
+                <img src="../imagens/posts/fortnite.png" alt="Fortnite">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
+              <p class="texto-p-header">Recurso estará disponível em todos os modos e plataformas</p>
                 <a href="#">
-                  <h2>Moderninha Smart é boa? Veja taxas e como funciona a máquina
-                    do PagSeguro</h2>
+                  <h2>Nova atualização de Fortnite deixará jogadores abrirem paraquedas durante partidas</h2>
                 </a>
               <p class="texto-p-main">
-                Nova máquina de cartão do PagSeguro traz tecnologias de
-                gestão e integração com o Android; saiba se ela é uma boa
-                opção para o seu negócio
+                Em seu blog oficial, a Epic Games anunciou que a próxima atualização de Fortnite
+                 vai adicionar um novo recurso para os jogadores abrirem seus paraquedas durante as partidas.
               </p>
               <p class="texto-p-footer">
-                HÁ 10 HORAS - EM MÁQUINAS DE CARTÃO
+                HÁ 10 HORAS - EM ATUALIZAÇÕES
               </p>
             </div>
           </div>
@@ -89,22 +88,44 @@
           <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/videogame.png" alt="Video Game">
+                <img src="../imagens/posts/bungie.png" alt="Destiny">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
+              <p class="texto-p-header">Jogo seria mais focado em elementos RPG</p>
                 <a href="#">
-                  <h2>Como usar o novo Editor de Avatares do Xbox One</h2>
+                  <h2>Bungie já está desenvolvendo Destiny 3 [Rumor]</h2>
                 </a>
               <p class="texto-p-main">
-                Criador de personagens foi atualizado com diversos itens e aparências
+                Parece que a Bungie não perdeu tempo depois de lançar o DLC Renegados
+                 e já está desenvolvendo Destiny 3!
               </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM VIDEO GAME
+                HÁ 11 HORAS - EM NOTÍCIAS
               </p>
             </div>
           </div>
+
+          <!-- <div class="posts">
+            <div class="imagem">
+              <a href="#">
+                <img src="imagens/posts/site-gears.jpg" alt="Rod Fergusson">
+              </a>
+            </div>
+            <div class="texto">
+              <p class="texto-p-header">novos jogos da franquia! </p>
+                <a href="#">
+                  <h2>Próximos jogos de Gears of War marcam uma nova fase do estúdio, diz Rod Fergusson</h2>
+                </a>
+              <p class="texto-p-main">
+                Na BGS 2018, tivemos a excelente oportunidade de conversar com
+                 Rod Fergusson, chefe do estúdio The Coalition e produtor da franquia Gears of War!
+              </p>
+              <p class="texto-p-footer">
+                ONTEM - EM XBOX
+              </p>
+            </div>
+          </div> -->
 
         </div>
         <aside class="main-aside">
@@ -114,7 +135,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -128,7 +149,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -142,7 +163,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -164,7 +185,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -178,7 +199,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -192,7 +213,7 @@
               <div class="aside-publicacao">
                 <div class="aside-img">
                   <a href="#">
-                    <img src="imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+                    <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
                   </a>
                 </div>
                 <div class="aside-container-link">
@@ -240,5 +261,4 @@
       </div>
     </footer>
   </body>
-  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </html>
