Correção dos links

--- a/pages/games.html
+++ b/pages/games.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/media.screen.css"/>
     <title>Games - TecBlog</title>
   </head>
-  
+
   <body>
 
     <header class="header">
@@ -45,13 +45,13 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="games-post.hmtl">
+              <a href="../pageposts/games.post.hmtl">
                 <img src="../imagens/posts/ghostbusters.png" alt="Ghostbusters">
               </a>
             </div>
             <div class="texto">
               <p class="texto-p-header">Jogo ganhou trailer de lançamento</p>
-                <a href="games-post.html">
+                <a href="../pageposts/games.post.html">
                   <h2>Ghostbusters World, jogo estilo Pokémon GO, é lançado para Android e iOS</h2>
                 </a>
               <p class="texto-p-main">
