--- a/pageposts/games.post.html
+++ b/pageposts/games.post.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/generics/generic.header.css"/>
-    <link rel="stylesheet" href="css/generics/generic.footer.css"/>
-    <link rel="stylesheet" href="css/page.post.css"/>
-    <link rel="stylesheet" href="css/media.screen.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.header.css"/>
+    <link rel="stylesheet" href="../css/generics/generic.footer.css"/>
+    <link rel="stylesheet" href="../css/page.post.css"/>
+    <link rel="stylesheet" href="../css/media.screen.css"/>
     <title>Games - TecBlog</title>
   </head>
   <body>
@@ -32,7 +32,11 @@
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
-          <a href="./games.html">GAMES</a>
+          <a href="../pages/games.html">GAMES
+            <i class="arrow right"></i>
+          </a>
+
+          <a href="./games.post.html">POSTS</a>
         </div>
       </div>
     </header>
@@ -46,7 +50,7 @@
         </p>
       </div>
       <div class="openning-image">
-        <img src="imagens/posts/ghostbusters-world.jpg" alt="Ghostbusters World" width="100%" height="100%"/>
+        <img src="../imagens/posts/ghostbusters-world.jpg" alt="Ghostbusters World" width="100%" height="100%"/>
       </div>
       <article class="content">
         <p>
@@ -54,7 +58,7 @@
         </p>
 
         <div class="image">
-          <img src="imagens/posts/Ghostbusters-1.jpg" alt="gameplay ghostbusters" width="100%" height="100%" />
+          <img src="../imagens/posts/Ghostbusters-1.jpg" alt="gameplay ghostbusters" width="100%" height="100%" />
         </div>
 
         <p>
@@ -84,5 +88,4 @@
     </main>
 
   </body>
-  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </html>
