Correção de links e estrutura css

--- a/pageposts/games.post.html
+++ b/pageposts/games.post.html
@@ -28,7 +28,7 @@
       <div class="migalhas">
         <div>
           <!-- BASTA DUPLICAR O (a) COM O NOME E O LINK PARA ADICIONAR OUTRA MIGALHA -->
-          <a href="./index.html">HOME
+          <a href="../index.html">HOME
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
@@ -36,7 +36,7 @@
             <i class="arrow right"></i>
           </a>
 
-          <a href="./games.post.html">POSTS</a>
+          <a href="./games.post.html">POST</a>
         </div>
       </div>
     </header>
