--- a/pages/games.html
+++ b/pages/games.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div>
         <div class="header-title">
-          <h1><a href="./index.html">TecBlog</a></h1>
+          <h1><a href="../index.html">TecBlog</a></h1>
         </div>
         <div class="title-page-header">
           <h1>GAMES</h1>
@@ -106,14 +106,14 @@
             </div>
           </div>
 
-          <!-- <div class="posts">
+          <div class="posts">
             <div class="imagem">
               <a href="#">
-                <img src="imagens/posts/site-gears.jpg" alt="Rod Fergusson">
+                <img src="../imagens/posts/site-gears.jpg" alt="Rod Fergusson">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">novos jogos da franquia! </p>
+              <p class="texto-p-header">Novos jogos da franquia! </p>
                 <a href="#">
                   <h2>Próximos jogos de Gears of War marcam uma nova fase do estúdio, diz Rod Fergusson</h2>
                 </a>
@@ -125,7 +125,7 @@
                 ONTEM - EM XBOX
               </p>
             </div>
-          </div> -->
+          </div>
 
         </div>
         <aside class="main-aside">
