Melhorado a navegação para mobile

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             <p>Preencha o formulário com o seu email para receber as últimas notícias do mundo Tecnológico!</p>
           </div>
           <div class="inputs-register-input">
-            <input type="email" name="email" value="" placeholder="Entre com o seu endereço de email" required>
-            <input type="submit" name="" value="Quero Receber">
+            <form method="post" action="">
+              <input type="email" name="email" value="" placeholder="Entre com o seu endereço de email" required autocomplete="off">
+              <input type="submit" name="" value="Quero Receber">
+            </form>
           </div>
         </div>
       </div>
@@ -82,5 +84,4 @@
     </footer>
 
   </body>
-  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </html>
