--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -220,8 +220,10 @@
             <p>Preencha o formulário com o seu email para receber as últimas notícias do mundo Tecnológico!</p>
           </div>
           <div class="inputs-register-input">
-            <input type="email" name="email" value="" placeholder="Entre com o seu endereço de email" required>
-            <input type="submit" name="" value="Quero Receber">
+            <form method="post" action="">
+              <input type="email" name="email" value="" placeholder="Entre com o seu endereço de email" required autocomplete="off">
+              <input type="submit" name="" value="Quero Receber">
+            </form>
           </div>
         </div>
       </div>
