alteração nas cores

--- a/pageposts/games.post.html
+++ b/pageposts/games.post.html
@@ -82,7 +82,7 @@
 
           </div>
           <input type="text" placeholder="Escreva um comentário..." />
-          <input type="submit" />
+          <input type="submit" value="enviar"/>
         </div>
       </article>
     </main>
