--- a/pages/games.html
+++ b/pages/games.html
@@ -256,7 +256,7 @@
           </ul>
         </div>
         <div class="footer-copyright">
-          <p>&copy Todos os direitos Reservados - TecBloog</p>
+          <p>&copy Todos os direitos Reservados - TecBlog</p>
         </div>
       </div>
     </footer>
