--- a/pages/smartphone.html
+++ b/pages/smartphone.html
@@ -235,7 +235,7 @@
           </ul>
         </div>
         <div class="footer-copyright">
-          <p>&copy Todos os direitos Reservados - TecBloog</p>
+          <p>&copy Todos os direitos Reservados - TecBlog</p>
         </div>
       </div>
     </footer>
