Correção de link

--- a/pages/games.html
+++ b/pages/games.html
@@ -45,7 +45,7 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="../pageposts/games.post.hmtl">
+              <a href="../pageposts/games.post.html">
                 <img src="../imagens/posts/ghostbusters.png" alt="Ghostbusters">
               </a>
             </div>
